--- a/pl_coordinate_converter_dialog_base.ui
+++ b/pl_coordinate_converter_dialog_base.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>735</width>
+    <width>699</width>
     <height>438</height>
    </rect>
   </property>
@@ -18,7 +18,7 @@
     <rect>
      <x>260</x>
      <y>190</y>
-     <width>91</width>
+     <width>81</width>
      <height>31</height>
     </rect>
    </property>
@@ -32,7 +32,7 @@
     <double>0.000000000000000</double>
    </property>
    <property name="maximum">
-    <double>100.000000000000000</double>
+    <double>60.000000000000000</double>
    </property>
    <property name="value">
     <double>0.000000000000000</double>
@@ -41,7 +41,7 @@
   <widget class="QPushButton" name="addTmpPointWGS">
    <property name="geometry">
     <rect>
-     <x>550</x>
+     <x>560</x>
      <y>80</y>
      <width>121</width>
      <height>141</height>
@@ -60,6 +60,9 @@ w układzie
 współrzędnych
 geografinczych
 (WGS84)</string>
+   </property>
+   <property name="autoDefault">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QSpinBox" name="spbLngDM_D">
@@ -108,7 +111,7 @@ geografinczych
     <rect>
      <x>370</x>
      <y>80</y>
-     <width>91</width>
+     <width>101</width>
      <height>31</height>
     </rect>
    </property>
@@ -150,7 +153,7 @@ geografinczych
   <widget class="QComboBox" name="cmbLngH">
    <property name="geometry">
     <rect>
-     <x>470</x>
+     <x>480</x>
      <y>190</y>
      <width>71</width>
      <height>31</height>
@@ -236,7 +239,7 @@ i sekundach</string>
   <widget class="QComboBox" name="cmbLatH">
    <property name="geometry">
     <rect>
-     <x>470</x>
+     <x>480</x>
      <y>80</y>
      <width>71</width>
      <height>31</height>
@@ -353,7 +356,7 @@ dziesiętnym</string>
     <string>w stopniach i minutach</string>
    </property>
   </widget>
-  <widget class="QDoubleSpinBox" name="dbspXCoord">
+  <widget class="QDoubleSpinBox" name="dbspYCoord">
    <property name="geometry">
     <rect>
      <x>370</x>
@@ -373,6 +376,9 @@ dziesiętnym</string>
    </property>
    <property name="maximum">
     <double>9999999.990000000223517</double>
+   </property>
+   <property name="value">
+    <double>294132.880000000004657</double>
    </property>
   </widget>
   <widget class="QComboBox" name="cmbPLCrs2">
@@ -421,7 +427,7 @@ dziesiętnym</string>
     </property>
    </item>
   </widget>
-  <widget class="QDoubleSpinBox" name="dbspYCoord">
+  <widget class="QDoubleSpinBox" name="dbspXCoord">
    <property name="geometry">
     <rect>
      <x>230</x>
@@ -441,6 +447,9 @@ dziesiętnym</string>
    </property>
    <property name="maximum">
     <double>9999999.990000000223517</double>
+   </property>
+   <property name="value">
+    <double>463557.979999999981374</double>
    </property>
   </widget>
   <widget class="QLabel" name="label_9">
@@ -485,7 +494,7 @@ dziesiętnym</string>
     <rect>
      <x>260</x>
      <y>80</y>
-     <width>91</width>
+     <width>81</width>
      <height>31</height>
     </rect>
    </property>
@@ -499,7 +508,7 @@ dziesiętnym</string>
     <double>0.000000000000000</double>
    </property>
    <property name="maximum">
-    <double>100.000000000000000</double>
+    <double>60.000000000000000</double>
    </property>
    <property name="value">
     <double>0.000000000000000</double>
@@ -622,7 +631,7 @@ dziesiętnym</string>
     <rect>
      <x>370</x>
      <y>190</y>
-     <width>91</width>
+     <width>101</width>
      <height>31</height>
     </rect>
    </property>
@@ -660,7 +669,7 @@ dziesiętnym</string>
     <string>Współrzędne w polskich układach współrzędnych</string>
    </property>
   </widget>
-  <widget class="QDoubleSpinBox" name="dbspXCoord_2">
+  <widget class="QDoubleSpinBox" name="dbspYCoord_2">
    <property name="geometry">
     <rect>
      <x>370</x>
@@ -681,8 +690,11 @@ dziesiętnym</string>
    <property name="maximum">
     <double>9999999.990000000223517</double>
    </property>
+   <property name="value">
+    <double>5568671.879999999888241</double>
+   </property>
   </widget>
-  <widget class="QDoubleSpinBox" name="dbspYCoord_2">
+  <widget class="QDoubleSpinBox" name="dbspXCoord_2">
    <property name="geometry">
     <rect>
      <x>230</x>
@@ -702,6 +714,9 @@ dziesiętnym</string>
    </property>
    <property name="maximum">
     <double>9999999.990000000223517</double>
+   </property>
+   <property name="value">
+    <double>5763372.030000000260770</double>
    </property>
   </widget>
   <widget class="QLabel" name="label_6">
@@ -740,39 +755,6 @@ dziesiętnym</string>
    <property name="text">
     <string>w stopniach, minutach
 i sekundach</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="addTmpPointPL1">
-   <property name="geometry">
-    <rect>
-     <x>500</x>
-     <y>280</y>
-     <width>191</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>7</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>Dodaj współrzędne jako tymcz.
-warstwę w tym układzie</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="addTmpPointPL1_2">
-   <property name="geometry">
-    <rect>
-     <x>500</x>
-     <y>350</y>
-     <width>191</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Dodaj współrzędne jako tymcz.
-warstwę w tym układzie</string>
    </property>
   </widget>
  </widget>
